--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "convert markdown files with frontmatter to json",
   "main": "index.js",
   "bin": {
-    "ocss": "./.bin/frontmd2json"
+    "frontmd2json": "./.bin/frontmd2json"
   },
   "keywords": [
     "markdown",
